src/objects/Ownership_Change__c.object
<CustomObject>
    <description>Custom object to track changes in ownership/assignment for Leads and Opportunities. Will be retroactive to encompass &quot;original&quot; Lead IDs for converted Leads.</description>
    <fields>
        <fullName>Assigned_Date_Time__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LeadId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Ownership Changes</relationshipLabel>
        <relationshipName>Ownership_Changes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_OwnerId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Ownership_Changes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Old_OwnerId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Old Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Ownership_Changes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OppId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Ownership Changes</relationshipLabel>
        <relationshipName>Ownership_Changes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Ownership Change</label>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{00000}</displayFormat>
        <label>Change Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ownership Changes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>